--- a/scss/_niveles.scss
+++ b/scss/_niveles.scss
@@ -8,4 +8,11 @@
   .color-card {
     background-color: $secondary-color;
   }
+
+  .img__niveles {
+    width: 75%;
+    height: 40%;
+    align-self: center;
+    padding-top: 1rem;
+  }
 }
