--- a/css/style.css
+++ b/css/style.css
@@ -1,83 +1,18 @@
-nav.navbar {
-  background-color: #7b253d;
-}
-nav.navbar a {
-  color: white;
-  text-transform: uppercase;
-}
-nav.navbar a:hover {
-  opacity: 0.65;
-  color: white;
-}
+/* Error: expected "{".
+ *    ,
+ * 14 | Check me out
+ *    |             ^
+ *    '
+ *   scss\_navbar.scss 14:13  @import
+ *   scss\style.scss 2:9      root stylesheet */
 
-footer {
-  background-color: #7b253d;
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: 'Error: expected "{".\a    \2577 \a 14 \2502  Check me out\a    \2502              ^\a    \2575 \a   scss\\_navbar.scss 14:13  @import\a   scss\\style.scss 2:9      root stylesheet';
 }
-footer .a__decoration {
-  text-decoration: none;
-  text-transform: uppercase;
-}
-footer .a__decoration:hover {
-  opacity: 0.65;
-  color: white;
-}
-footer a.sn:hover {
-  opacity: 0.65;
-}
-
-@media (max-width: 768px) {
-  .size {
-    font-size: xx-small;
-  }
-}
-.main-index {
-  background-color: #373434;
-}
-.main-index .section__intro {
-  background-color: #373434;
-}
-.main-index .section__intro .img__teatinos {
-  width: 7rem;
-  height: 7rem;
-}
-.main-index .section__frase {
-  background-color: #373434;
-}
-.main-index .section__frase .img__ingreso {
-  width: 100%;
-}
-
-.section-niveles {
-  background-color: #373434;
-}
-.section-niveles .h1__niveles {
-  font-size: 90px;
-}
-.section-niveles .color-card {
-  background-color: #373434;
-}
-.section-niveles .img__niveles {
-  width: 75%;
-  height: 40%;
-  align-self: center;
-  padding-top: 1rem;
-}
-
-.section-inscripciones {
-  background-color: #373434;
-}
-.section-inscripciones .h1__inscripciones {
-  font-size: 90px;
-}
-
-section {
-  background-color: #373434;
-}
-
-.img__project {
-  height: 20rem;
-  width: 30rem;
-  border-radius: 10px;
-}
-
-/*# sourceMappingURL=style.css.map */
