--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,3 +1,31 @@
+body.contacto {
+  font-family: "Playfair Display", serif;
+
+  .div__a-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .btn-a {
+      text-decoration: none;
+      padding: 40px 80px;
+      color: white;
+      border: 3px solid white;
+      text-transform: uppercase;
+      font-size: 40px;
+      font-weight: 300;
+      letter-spacing: -2px;
+      transition: all 0.5s;
+
+      &:hover {
+        font-weight: 900;
+        letter-spacing: 10px;
+        border: 7px solid $primary-color;
+      }
+    }
+  }
+}
+
 .div__a-btn {
   display: flex;
   align-items: center;
@@ -10,7 +38,6 @@
     border: 3px solid white;
     text-transform: uppercase;
     font-size: 40px;
-    font-family: "roboto";
     font-weight: 300;
     letter-spacing: -2px;
     transition: all 0.5s;
