--- a/scss/_niveles.scss
+++ b/scss/_niveles.scss
@@ -1,3 +1,26 @@
+body.niveles {
+  font-family: "Playfair Display", serif;
+
+  .section-niveles {
+    background-color: $secondary-color;
+
+    .h1__niveles {
+      font-size: 90px;
+    }
+
+    .color-card {
+      background-color: $secondary-color;
+    }
+
+    .img__niveles {
+      width: 95%;
+      height: 95%;
+      align-self: center;
+      padding-top: 1rem;
+    }
+  }
+}
+
 .section-niveles {
   background-color: $secondary-color;
 
