--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,9 @@ body.niveles .section-niveles .img__niveles {
 body.inscripciones {
   font-family: "Playfair Display", serif;
 }
+body.inscripciones .section-inscripciones {
+  background-color: #373434;
+}
 body.inscripciones .titulo-galeria {
   font-size: 4rem;
   letter-spacing: 5px;
@@ -105,6 +108,7 @@ body.inscripciones .titulo-galeria {
 }
 
 .fotos {
+  background-color: #373434;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -129,12 +133,15 @@ body.proyectos .img__project {
 body.contacto {
   font-family: "Playfair Display", serif;
 }
-body.contacto .div__a-btn {
+body.contacto .formulario {
+  background-color: #373434;
+}
+body.contacto .formulario .div__a-btn {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-body.contacto .div__a-btn .btn-a {
+body.contacto .formulario .div__a-btn .btn-a {
   text-decoration: none;
   padding: 40px 80px;
   color: white;
@@ -145,29 +152,7 @@ body.contacto .div__a-btn .btn-a {
   letter-spacing: -2px;
   transition: all 0.5s;
 }
-body.contacto .div__a-btn .btn-a:hover {
-  font-weight: 900;
-  letter-spacing: 10px;
-  border: 7px solid #7b253d;
-}
-
-.div__a-btn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.div__a-btn .btn-a {
-  text-decoration: none;
-  padding: 40px 80px;
-  color: white;
-  border: 3px solid white;
-  text-transform: uppercase;
-  font-size: 40px;
-  font-weight: 300;
-  letter-spacing: -2px;
-  transition: all 0.5s;
-}
-.div__a-btn .btn-a:hover {
+body.contacto .formulario .div__a-btn .btn-a:hover {
   font-weight: 900;
   letter-spacing: 10px;
   border: 7px solid #7b253d;
