--- a/scss/_inscripciones.scss
+++ b/scss/_inscripciones.scss
@@ -5,8 +5,8 @@ body.inscripciones {
     background-color: $secondary-color;
   }
 
-  .titulo-galeria {
-    font-size: 4rem;
+  .aviso {
+    font-size: 3rem;
     letter-spacing: 5px;
     text-shadow: 4px 4px 5px #cdcdcd;
     animation: flotar 3s linear infinite alternate;
@@ -19,17 +19,5 @@ body.inscripciones {
         transform: rotate(-5deg);
       }
     }
-  }
-}
-
-.fotos {
-  background-color: $secondary-color;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(3, 1fr);
-  grid-gap: 0.7rem;
-
-  img {
-    width: 100%;
   }
 }
