--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -22,3 +22,16 @@ body.index {
     }
   }
 }
+
+@media (max-width: 576px) {
+  .carrusel {
+    padding-top: 3rem;
+  }
+
+  .frase__educacion {
+    padding-top: 3rem;
+  }
+}
+
+@media (max-width: 992px) {
+}
